# test

./: CMakeLists.txt  MainWindow.h  README.md  apkversion.json  brightnessclass.h  daqanalog.h  depositionclass.h  main.cpp  preference.h  tr.txt
app/release/: output-metadata.json
myapk/: apkversion.json  output-metadata.json
myapk/release/: output-metadata.json
ognadh/: app-debug.apk  output-metadata.json
sunresh/: app-release.apk  output-metadata.json
